--- a/client/style.css
+++ b/client/style.css
@@ -28,6 +28,10 @@ a {
   color: #001489;
 }
 
+h2, h3 {
+  margin-bottom: 0.5em;
+}
+
 main {
   padding: 0 2em;
   display: flex;
@@ -57,6 +61,7 @@ main #login[hidden] {
 main form {
   display: flex;
   flex-direction: column;
+  margin-bottom: 2em;
 }
 
 main form .field {
@@ -106,7 +111,7 @@ main .local-preview {
 
 main .local-preview:not([hidden]) {
   display: grid;
-  gap: 1em;
+  gap: 48px;
 }
 
 main .local-preview .video-preview {
@@ -160,7 +165,7 @@ main .local-preview form label {
   width: 100%;
 }
 
-@media screen and (min-width: 780px) {
+@media screen and (min-width: 820px) {
 
   main form .field,
   main form {
@@ -178,7 +183,7 @@ main .local-preview form label {
   }
 
   main .local-preview:not([hidden]) {
-    width: 720px;
+    width: 760px;
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
   }
@@ -215,6 +220,10 @@ main .local-preview form label {
   border-radius: 6px;
 }
 
+#video-effects {
+  margin-bottom: 2em;
+}
+
 #video-effects h3{
   margin-bottom: 0.5em;
 }
@@ -233,6 +242,13 @@ main .local-preview form label {
 }
 #video-effects input:checked + label {
   background-color: #e1e3ea;
+}
+
+meter {
+  width: 100%;
+  height: 30px;
+  display: block;
+  margin-bottom: 1em;
 }
 
 footer {
